crates/toml_edit/tests/fixtures/invalid/string/bad-uni-esc-5.stderr
TOML parse error at line 1, column 13
  |
1 | str = "val\Ugggggggg"
  |             ^
Invalid unicode 8-digit hex code
